<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/etName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:ems="10"
          android:hint="@string/name"
          android:inputType="textPersonName"
          android:paddingBottom="15dp"
          android:textSize="14sp"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etLayout100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/etSurName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:ems="10"
          android:hint="@string/surname"
          android:inputType="textPersonName"
          android:paddingBottom="15dp"
          android:textSize="14sp"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/etEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:ems="10"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:paddingBottom="15dp"
          android:textSize="14sp"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/etPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:paddingBottom="15dp"
          android:textSize="14sp"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/etPasswordConfirm"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:ems="10"
          android:hint="@string/confirm_password"
          android:inputType="textPassword"
          android:paddingBottom="15dp"
          android:textSize="14sp"
          />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white"
        />
  </LinearLayout>

</FrameLayout>