<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/etEmailLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColorHint="@color/colorAccent"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        android:textSize="14sp"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/etPasswordLayout"
      android:textColorHint="@color/colorAccent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/btOk"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="@color/colorPrimary"
      android:text="@string/login"
      android:textColor="@android:color/white"
      />

  <!--Button
      android:id="@+id/btRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/register"
      style="?attr/buttonBarButtonStyle"
      /-->
</LinearLayout>