<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <LinearLayout
        android:id="@+id/llPictures"
        android:layout_width="match_parent"
        android:layout_height="@dimen/picture_big_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
      <ImageView
          android:id="@+id/ivSupplierPicture"
          android:layout_width="0dp"
          android:layout_height="@dimen/picture_big_height"
          android:layout_weight="1"
          android:scaleType="fitCenter"
          />

      <ImageView
          android:id="@+id/ivSelectPicture"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@drawable/border"
          android:scaleType="center"
          android:src="@drawable/ic_photo_camera"
          android:tint="@color/black"
          />

    </LinearLayout>
    <LinearLayout
        style="@style/AddProduct.FieldItemContainer"
        >
      <TextView
          android:text="@string/product_name"
          style="@style/AddProduct.FieldItemTitle"
          />
      <View
          style="@style/AddProduct.FieldItemSeparator"
          />
      <EditText
          android:id="@+id/tvSupplierName"
          android:hint="@string/product_name"
          android:maxLines="1"
          style="@style/AddProduct.FieldItemValue"
          />
    </LinearLayout>

    <LinearLayout
        style="@style/AddProduct.FieldItemContainer"
        >
      <TextView
          android:text="@string/supplier_business_name"
          style="@style/AddProduct.FieldItemTitle"
          />
      <View
          style="@style/AddProduct.FieldItemSeparator"
          />
      <EditText
          android:id="@+id/tvSupplierBusinessName"
          android:hint="@string/supplier_business_name"

          style="@style/AddProduct.FieldItemValue"
          />
    </LinearLayout>

    <LinearLayout
        style="@style/AddProduct.FieldItemContainer"
        >
      <TextView
          android:text="@string/product_observation"
          style="@style/AddProduct.FieldItemTitle"
          />
      <View
          style="@style/AddProduct.FieldItemSeparator"
          />
      <EditText
          android:id="@+id/tvSupplierObservation"
          android:hint="@string/product_observation"
          style="@style/AddProduct.FieldItemValue"
          />
    </LinearLayout>

  </LinearLayout>
</ScrollView>